2006-04-30  Andreas Köhler  <andi5.py@gmx.net>

	* configure.in:
	* src/register/register-gnome/gnucash-item-edit.[ch]: Remove all
	  XIM code, as it has been commented out unconditionally already
	  for a while. Send focus in/out events to register GtkEntry.
	  Address #337020.

2006-04-29  Joshua Sled  <jsled@asynchronous.org>

	Bug#157179: make multi-commodity SX handling a bit better.

	* src/gnome/dialog-sxsincelast.c (sxsl_get_sx_vars): refactor to
	process SX splits in the same order as the transaction creation
	routine.  Return needed commodity exchange rates as variables.
	(create_each_transaction_helper): Use the user-provided exchange
	rates to create the splits, not the pricedb.

	* src/gnome/dialog-scheduledxaction.c (gnc_sxed_check_consistent):
	Ensure that auto-create SX template txns aren't in multiple commodities.

	* src/app-utils/gnc-exp-parser.c (gnc_ep_tmpvarhash_check_vals):
	remove printf.

2006-04-29  Christian Stimming  <stimming@tuhh.de>

	* po/glossary/gnc-glossary.txt: Clarify definitions of and
	relations between bill, invoice, job, and order.

2006-04-29  David Hampton  <hampton@employees.org>

	* src/report/report-gnome/gnc-plugin-page-report.c: Don't allow
	the user to save a report until they have changed the report
	name. Remove the duplicate shortcut on the Add Report menu item.

	* src/report/report-system/report.scm: Don't load a custom report
	that has the same name as a standard report.  Fixes #168250.

	* src/bin/gnucash-bin.c: Load the user config earlier in startup.
	Fixes the missing custom report problem #338668.

	* src/register/register-gnome/gnucash-sheet.c: Lower the minimum
	required width of the register.  This does affect the size
	constraint imposed by the register summary bar.

2006-04-28  David Hampton  <hampton@employees.org>

	* configure.in: Default to --enable-error-on-warning only in svn
	based source trees. Fixes #330687.

	* src/gnome/window-reconcile.c:
	* src/gnome/gnc-plugin-page-account-tree.c: